Fixed README files again

--- a/backups/README
+++ b/backups/README
@@ -1,1 +1,1 @@
-Back up (ending in ~) files created by vim will go in here.
+Back up files (ending in ~) created by vim will go into this directory.
