--- a/swapfiles/README
+++ b/swapfiles/README
@@ -1,1 +1,1 @@
-Swap (ending in .swp) files created by vim will go in here.
+Swap files (ending in .swp) created by vim will go into this directory.
